[workspace.package]
version = "1.0.0-alpha.5"
edition = "2021"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"
repository = "https://github.com/LemmyNet/lemmy"

[package]
name = "lemmy_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

# See https://github.com/johnthagen/min-sized-rust for additional optimizations
[profile.release]
lto = "fat"
opt-level = 3     # Optimize for speed, not size.
codegen-units = 1 # Reduce parallel code generation.

# This profile significantly speeds up build time. If debug info is needed you can comment the line
# out temporarily, but make sure to leave this in the main branch.
[profile.dev]
debug = 0

[features]
default = []

[workspace]
members = [
  "crates/api",
  "crates/api_crud",
  "crates/api_common",
  "crates/apub",
  "crates/apub_objects",
  "crates/utils",
  "crates/db_perf",
  "crates/db_schema",
  "crates/db_schema_file",
  "crates/db_views/private_message",
  "crates/db_views/local_user",
  "crates/db_views/local_image",
  "crates/db_views/person",
  "crates/db_views/post",
  "crates/db_views/vote",
  "crates/db_views/reports",
  "crates/db_views/local_image",
  "crates/db_views/comment",
  "crates/db_views/community",
  "crates/db_views/community_moderator",
  "crates/db_views/community_follower",
  "crates/db_views/community_person_ban",
  "crates/db_views/custom_emoji",
  "crates/db_views/inbox_combined",
  "crates/db_views/modlog_combined",
  "crates/db_views/person_content_combined",
  "crates/db_views/person_saved_combined",
  "crates/db_views/person_liked_combined",
  "crates/db_views/report_combined",
  "crates/db_views/search_combined",
  "crates/db_views/site",
  "crates/routes",
  "crates/federate",
  "crates/email",
  "crates/db_views/edit_community",
  "crates/db_views/add_mod_to_community_response",
  "crates/db_views/hide_community",
  "crates/db_views/delete_community",
  "crates/db_views/create_community_tag",
  "crates/db_views/update_community_tag",
  "crates/db_views/delete_community_tag",
  "crates/db_views/get_community",
  "crates/db_views/get_community_response",
  "crates/db_views/create_community",
  "crates/db_views/community_response",
  "crates/db_views/list_communities",
  "crates/db_views/list_communities_response",
  "crates/db_views/ban_from_community",
  "crates/db_views/ban_from_community_response",
  "crates/db_views/add_mod_to_community",
  "crates/db_views/remove_community",
  "crates/db_views/follow_community",
  "crates/db_views/block_community",
  "crates/db_views/block_community_response",
  "crates/db_views/get_random_community",
  "crates/db_views/list_community_pending_follows",
  "crates/db_views/transfer_community",
  "crates/db_views/get_community_pending_follows_count",
  "crates/db_views/get_community_pending_follows_count_response",
  "crates/db_views/list_community_pending_follows_response",
  "crates/db_views/approve_community_pending_follower",
  "crates/db_views/create_comment",
  "crates/db_views/get_comment",
  "crates/db_views/edit_comment",
  "crates/db_views/distinguish_comment",
  "crates/db_views/delete_comment",
  "crates/db_views/remove_comment",
  "crates/db_views/save_comment",
  "crates/db_views/comment_response",
  "crates/db_views/create_comment_like",
  "crates/db_views/get_comments",
  "crates/db_views/get_comments_response",
  "crates/db_views/get_comments_slim_response",
  "crates/db_views/list_comment_likes",
  "crates/db_views/list_comment_likes_response",
  "crates/db_views/login",
  "crates/db_views/register",
  "crates/db_views/get_captcha_response",
  "crates/db_views/captcha_response",
  "crates/db_views/save_user_settings",
  "crates/db_views/change_password",
  "crates/db_views/login_response",
  "crates/db_views/get_person_details",
  "crates/db_views/get_person_details_response",
  "crates/db_views/list_person_read",
  "crates/db_views/list_person_read_response",
  "crates/db_views/list_person_hidden",
  "crates/db_views/list_person_hidden_response",
  "crates/db_views/add_admin",
  "crates/db_views/add_admin_response",
  "crates/db_views/ban_person",
  "crates/db_views/ban_person_response",
  "crates/db_views/block_person",
  "crates/db_views/block_person_response",
  "crates/db_views/mark_person_comment_mention_as_read",
  "crates/db_views/mark_person_post_mention_as_read",
  "crates/db_views/mark_comment_reply_as_read",
  "crates/db_views/delete_account",
  "crates/db_views/password_reset",
  "crates/db_views/password_change_after_reset",
  "crates/db_views/get_report_count",
  "crates/db_views/get_report_count_response",
  "crates/db_views/get_unread_count_response",
  "crates/db_views/verify_email",
  "crates/db_views/generate_totp_secret_response",
  "crates/db_views/update_totp",
  "crates/db_views/update_totp_response",
  "crates/db_views/list_media",
  "crates/db_views/list_media_response",
  "crates/db_views/list_logins_response",
  "crates/db_views/resend_verification_email",
  "crates/db_views/create_custom_emoji",
  "crates/db_views/edit_custom_emoji",
  "crates/db_views/delete_custom_emoji",
  "crates/db_views/custom_emoji_response",
  "crates/db_views/list_custom_emojis_response",
  "crates/db_views/list_custom_emojis",
  "crates/db_views/create_post",
  "crates/db_views/post_response",
  "crates/db_views/get_post",
  "crates/db_views/get_post_response",
  "crates/db_views/get_posts",
  "crates/db_views/get_posts_response",
  "crates/db_views/create_post_like",
  "crates/db_views/edit_post",
  "crates/db_views/delete_post",
  "crates/db_views/remove_post",
  "crates/db_views/mark_post_as_read",
  "crates/db_views/mark_many_posts_as_read",
  "crates/db_views/hide_post",
  "crates/db_views/lock_post",
  "crates/db_views/feature_post",
  "crates/db_views/save_post",
  "crates/db_views/get_site_metadata",
  "crates/db_views/get_site_metadata_response",
  "crates/db_views/link_metadata",
  "crates/db_views/open_graph_data",
  "crates/db_views/list_post_likes",
  "crates/db_views/list_post_likes_response",
  "crates/db_views/create_private_message",
  "crates/db_views/edit_private_message",
  "crates/db_views/delete_private_message",
  "crates/db_views/mark_private_message_as_read",
  "crates/db_views/private_message_response",
  "crates/db_views/resolve_object",
  "crates/db_views/resolve_object_response",
  "crates/db_views/get_modlog",
  "crates/db_views/create_site",
  "crates/db_views/edit_site",
  "crates/db_views/site_response",
  "crates/db_views/get_site_response",
  "crates/db_views/my_user_info",
  "crates/db_views/plugin_metadata",
  "crates/api_utils",
  "crates/db_views/get_federated_instances_response",
  "crates/db_views/federated_instances",
  "crates/db_views/readable_federation_state",
  "crates/db_views/instance_with_federation_state",
  "crates/db_views/success_response",
  "crates/db_views/purge_person",
  "crates/db_views/purge_community",
  "crates/db_views/purge_post",
  "crates/db_views/purge_comment",
  "crates/db_views/list_registration_applications",
  "crates/db_views/list_registration_applications_response",
  "crates/db_views/get_registration_application",
  "crates/db_views/approve_registration_application",
  "crates/db_views/registration_application_response",
  "crates/db_views/get_unread_registration_application_count_response",
  "crates/db_views/user_block_instance_params",
  "crates/db_views/admin_block_instance_params",
  "crates/db_views/admin_allow_instance_params",
  "crates/db_views/admin_list_users",
  "crates/db_views/admin_list_users_response",
  "crates/db_views/create_tagline",
  "crates/db_views/update_tagline",
  "crates/db_views/delete_tagline",
  "crates/db_views/tagline_response",
  "crates/db_views/list_taglines_response",
  "crates/db_views/list_taglines",
  "crates/db_views/create_oauth_provider",
  "crates/db_views/edit_oauth_provider",
  "crates/db_views/delete_oauth_provider",
  "crates/db_views/authenticate_with_oauth",
  "crates/db_views/image_get_params",
  "crates/db_views/delete_image_params",
  "crates/db_views/image_proxy_params",
  "crates/db_views/upload_image_response",
  "crates/db_views/community_id_query",
  "crates/db_views/list_reports",
  "crates/db_views/list_reports_response",
  "crates/db_views/create_comment_report",
  "crates/db_views/comment_report_response",
  "crates/db_views/resolve_comment_report",
  "crates/db_views/create_community_report",
  "crates/db_views/community_report_response",
  "crates/db_views/resolve_community_report",
  "crates/db_views/create_post_report",
  "crates/db_views/post_report_response",
  "crates/db_views/resolve_post_report",
  "crates/db_views/create_private_message_report",
  "crates/db_views/private_message_report_response",
  "crates/db_views/resolve_private_message_report",
]

[workspace.lints.clippy]
cast_lossless = "deny"
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
get_first = "deny"
implicit_clone = "deny"
indexing_slicing = "deny"
inefficient_to_string = "deny"
items-after-statements = "deny"
manual_string_new = "deny"
needless_collect = "deny"
perf = { level = "deny", priority = -1 }
redundant_closure_for_method_calls = "deny"
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
uninlined_format_args = "allow"
unused_self = "deny"
unwrap_used = "deny"
unimplemented = "deny"
unused_async = "deny"
map_err_ignore = "deny"
expect_used = "deny"
as_conversions = "deny"

[workspace.dependencies]
lemmy_api = { version = "=1.0.0-alpha.5", path = "./crates/api" }
lemmy_api_crud = { version = "=1.0.0-alpha.5", path = "./crates/api_crud" }
lemmy_apub = { version = "=1.0.0-alpha.5", path = "./crates/apub" }
lemmy_apub_objects = { version = "=1.0.0-alpha.5", path = "./crates/apub_objects" }
lemmy_utils = { version = "=1.0.0-alpha.5", path = "./crates/utils", default-features = false }
lemmy_db_schema = { version = "=1.0.0-alpha.5", path = "./crates/db_schema" }
lemmy_db_schema_file = { version = "=1.0.0-alpha.5", path = "./crates/db_schema_file" }
lemmy_api_common = { version = "=1.0.0-alpha.5", path = "./crates/api_common" }
lemmy_api_utils = { version = "=1.0.0-alpha.5", path = "./crates/api_utils" }
lemmy_routes = { version = "=1.0.0-alpha.5", path = "./crates/routes" }
lemmy_federate = { version = "=1.0.0-alpha.5", path = "./crates/federate" }
lemmy_email = { version = "=1.0.0-alpha.5", path = "./crates/email" }
lemmy_db_views_private_message = { version = "=1.0.0-alpha.5", path = "./crates/db_views/private_message" }
lemmy_db_views_mark_private_message_as_read = { version = "=1.0.0-alpha.5", path = "./crates/db_views/mark_private_message_as_read" }
lemmy_db_views_private_message_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/private_message_response" }
lemmy_db_views_create_private_message = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_private_message" }
lemmy_db_views_edit_private_message = { version = "=1.0.0-alpha.5", path = "./crates/db_views/edit_private_message" }
lemmy_db_views_delete_private_message = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_private_message" }
lemmy_db_views_registration_applications = { version = "=1.0.0-alpha.5", path = "./crates/db_views/registration_applications" }
lemmy_db_views_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/comment" }
lemmy_db_views_create_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_comment" }
lemmy_db_views_create_comment_like = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_comment_like" }
lemmy_db_views_delete_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_comment" }
lemmy_db_views_remove_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/remove_comment" }
lemmy_db_views_distinguish_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/distinguish_comment" }
lemmy_db_views_edit_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/edit_comment" }
lemmy_db_views_get_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_comment" }
lemmy_db_views_get_comments = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_comments" }
lemmy_db_views_save_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/save_comment" }
lemmy_db_views_comment_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/comment_response" }
lemmy_db_views_get_comments_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_comments_response" }
lemmy_db_views_get_comments_slim_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_comments_slim_response" }
lemmy_db_views_list_comment_likes = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_comment_likes" }
lemmy_db_views_list_comment_likes_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_comment_likes_response" }
lemmy_db_views_local_user = { version = "=1.0.0-alpha.5", path = "./crates/db_views/local_user" }
lemmy_db_views_person = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person" }
lemmy_db_views_get_unread_count_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_unread_count_response" }
lemmy_db_views_list_reports = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_reports" }
lemmy_db_views_list_reports_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_reports_response" }
lemmy_db_views_create_comment_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_comment_report" }
lemmy_db_views_comment_report_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/comment_report_response" }
lemmy_db_views_resolve_comment_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/resolve_comment_report" }
lemmy_db_views_create_community_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_community_report" }
lemmy_db_views_community_report_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_report_response" }
lemmy_db_views_resolve_community_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/resolve_community_report" }
lemmy_db_views_create_post_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_post_report" }
lemmy_db_views_post_report_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/post_report_response" }
lemmy_db_views_resolve_post_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/resolve_post_report" }
lemmy_db_views_create_private_message_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_private_message_report" }
lemmy_db_views_private_message_report_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/private_message_report_response" }
lemmy_db_views_resolve_private_message_report = { version = "=1.0.0-alpha.5", path = "./crates/db_views/resolve_private_message_report" }
lemmy_db_views_get_report_count = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_report_count" }
lemmy_db_views_get_report_count_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_report_count_response" }
lemmy_db_views_add_admin = { version = "=1.0.0-alpha.5", path = "./crates/db_views/add_admin" }
lemmy_db_views_add_admin_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/add_admin_response" }
lemmy_db_views_ban_person = { version = "=1.0.0-alpha.5", path = "./crates/db_views/ban_person" }
lemmy_db_views_ban_person_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/ban_person_response" }
lemmy_db_views_block_person = { version = "=1.0.0-alpha.5", path = "./crates/db_views/block_person" }
lemmy_db_views_block_person_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/block_person_response" }
lemmy_db_views_list_person_hidden = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_person_hidden" }
lemmy_db_views_list_person_hidden_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_person_hidden_response" }
lemmy_db_views_list_person_read = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_person_read" }
lemmy_db_views_list_person_read_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_person_read_response" }
lemmy_db_views_login = { version = "=1.0.0-alpha.5", path = "./crates/db_views/login" }
lemmy_db_views_verify_email = { version = "=1.0.0-alpha.5", path = "./crates/db_views/verify_email" }
lemmy_db_views_generate_totp_secret_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/generate_totp_secret_response" }
lemmy_db_views_update_totp = { version = "=1.0.0-alpha.5", path = "./crates/db_views/update_totp" }
lemmy_db_views_update_totp_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/update_totp_response" }
lemmy_db_views_password_reset = { version = "=1.0.0-alpha.5", path = "./crates/db_views/password_reset" }
lemmy_db_views_password_change_after_reset = { version = "=1.0.0-alpha.5", path = "./crates/db_views/password_change_after_reset" }
lemmy_db_views_delete_account = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_account" }
lemmy_db_views_register = { version = "=1.0.0-alpha.5", path = "./crates/db_views/register" }
lemmy_db_views_captcha_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/captcha_response" }
lemmy_db_views_get_captcha_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_captcha_response" }
lemmy_db_views_save_user_settings = { version = "=1.0.0-alpha.5", path = "./crates/db_views/save_user_settings" }
lemmy_db_views_change_password = { version = "=1.0.0-alpha.5", path = "./crates/db_views/change_password" }
lemmy_db_views_login_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/login_response" }
lemmy_db_views_get_person_details = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_person_details" }
lemmy_db_views_get_person_details_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_person_details_response" }
lemmy_db_views_mark_person_comment_mention_as_read = { version = "=1.0.0-alpha.5", path = "./crates/db_views/mark_person_comment_mention_as_read" }
lemmy_db_views_mark_person_post_mention_as_read = { version = "=1.0.0-alpha.5", path = "./crates/db_views/mark_person_post_mention_as_read" }
lemmy_db_views_mark_comment_reply_as_read = { version = "=1.0.0-alpha.5", path = "./crates/db_views/mark_comment_reply_as_read" }
lemmy_db_views_list_media = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_media" }
lemmy_db_views_list_media_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_media_response" }
lemmy_db_views_list_logins_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_logins_response" }
lemmy_db_views_resend_verification_email = { version = "=1.0.0-alpha.5", path = "./crates/db_views/resend_verification_email" }
lemmy_db_views_custom_emoji = { version = "=1.0.0-alpha.5", path = "./crates/db_views/custom_emoji" }
lemmy_db_views_create_custom_emoji = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_custom_emoji" }
lemmy_db_views_custom_emoji_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/custom_emoji_response" }
lemmy_db_views_edit_custom_emoji = { version = "=1.0.0-alpha.5", path = "./crates/db_views/edit_custom_emoji" }
lemmy_db_views_delete_custom_emoji = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_custom_emoji" }
lemmy_db_views_list_custom_emojis_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_custom_emojis_response" }
lemmy_db_views_list_custom_emojis = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_custom_emojis" }
lemmy_db_views_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/post" }
lemmy_db_views_post_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/post_response" }
lemmy_db_views_create_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_post" }
lemmy_db_views_edit_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/edit_post" }
lemmy_db_views_delete_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_post" }
lemmy_db_views_hide_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/hide_post" }
lemmy_db_views_lock_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/lock_post" }
lemmy_db_views_feature_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/feature_post" }
lemmy_db_views_remove_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/remove_post" }
lemmy_db_views_save_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/save_post" }
lemmy_db_views_create_post_like = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_post_like" }
lemmy_db_views_get_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_post" }
lemmy_db_views_get_post_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_post_response" }
lemmy_db_views_get_posts = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_posts" }
lemmy_db_views_get_posts_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_posts_response" }
lemmy_db_views_open_graph_data = { version = "=1.0.0-alpha.5", path = "./crates/db_views/open_graph_data" }
lemmy_db_views_link_metadata = { version = "=1.0.0-alpha.5", path = "./crates/db_views/link_metadata" }
lemmy_db_views_get_site_metadata = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_site_metadata" }
lemmy_db_views_get_site_metadata_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_site_metadata_response" }
lemmy_db_views_mark_post_as_read = { version = "=1.0.0-alpha.5", path = "./crates/db_views/mark_post_as_read" }
lemmy_db_views_mark_many_posts_as_read = { version = "=1.0.0-alpha.5", path = "./crates/db_views/mark_many_posts_as_read" }
lemmy_db_views_list_post_likes = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_post_likes" }
lemmy_db_views_list_post_likes_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_post_likes_response" }
lemmy_db_views_vote = { version = "=1.0.0-alpha.5", path = "./crates/db_views/vote" }
lemmy_db_views_add_mod_to_community_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/add_mod_to_community_response" }
lemmy_db_views_approve_community_pending_follower = { version = "=1.0.0-alpha.5", path = "./crates/db_views/approve_community_pending_follower" }
lemmy_db_views_ban_from_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/ban_from_community" }
lemmy_db_views_ban_from_community_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/ban_from_community_response" }
lemmy_db_views_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community" }
lemmy_db_views_community_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_response" }
lemmy_db_views_get_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_community" }
lemmy_db_views_get_community_pending_follows_count = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_community_pending_follows_count" }
lemmy_db_views_get_community_pending_follows_count_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_community_pending_follows_count_response" }
lemmy_db_views_get_community_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_community_response" }
lemmy_db_views_get_random_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_random_community" }
lemmy_db_views_create_community_tag = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_community_tag" }
lemmy_db_views_delete_community_tag = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_community_tag" }
lemmy_db_views_update_community_tag = { version = "=1.0.0-alpha.5", path = "./crates/db_views/update_community_tag" }
lemmy_db_views_list_community_pending_follows = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_community_pending_follows" }
lemmy_db_views_list_community_pending_follows_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_community_pending_follows_response" }
lemmy_db_views_list_communities = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_communities" }
lemmy_db_views_list_communities_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_communities_response" }
lemmy_db_views_edit_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/edit_community" }
lemmy_db_views_block_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/block_community" }
lemmy_db_views_block_community_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/block_community_response" }
lemmy_db_views_create_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_community" }
lemmy_db_views_follow_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/follow_community" }
lemmy_db_views_remove_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/remove_community" }
lemmy_db_views_transfer_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/transfer_community" }
lemmy_db_views_add_mod_to_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/add_mod_to_community" }
lemmy_db_views_delete_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_community" }
lemmy_db_views_hide_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/hide_community" }
lemmy_db_views_community_moderator = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_moderator" }
lemmy_db_views_community_follower = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_follower" }
lemmy_db_views_community_person_ban = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_person_ban" }
lemmy_db_views_reports = { version = "=1.0.0-alpha.5", path = "./crates/db_views/reports" }
lemmy_db_views_local_image = { version = "=1.0.0-alpha.5", path = "./crates/db_views/local_image" }
lemmy_db_views_image_get_params = { version = "=1.0.0-alpha.5", path = "./crates/db_views/image_get_params" }
lemmy_db_views_image_proxy_params = { version = "=1.0.0-alpha.5", path = "./crates/db_views/image_proxy_params" }
lemmy_db_views_delete_image_params = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_image_params" }
lemmy_db_views_upload_image_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/upload_image_response" }
lemmy_db_views_community_id_query = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_id_query" }
lemmy_db_views_inbox_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/inbox_combined" }
lemmy_db_views_modlog_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/modlog_combined" }
lemmy_db_views_person_content_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_content_combined" }
lemmy_db_views_person_saved_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_saved_combined" }
lemmy_db_views_person_liked_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_liked_combined" }
lemmy_db_views_report_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/report_combined" }
lemmy_db_views_search_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/search_combined" }
lemmy_db_views_site = { version = "=1.0.0-alpha.5", path = "./crates/db_views/site" }
lemmy_db_views_create_tagline = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_tagline" }
lemmy_db_views_delete_tagline = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_tagline" }
lemmy_db_views_update_tagline = { version = "=1.0.0-alpha.5", path = "./crates/db_views/update_tagline" }
lemmy_db_views_tagline_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/tagline_response" }
lemmy_db_views_list_taglines = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_taglines" }
lemmy_db_views_list_taglines_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_taglines_response" }
lemmy_db_views_success_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/success_response" }
lemmy_db_views_resolve_object = { version = "=1.0.0-alpha.5", path = "./crates/db_views/resolve_object" }
lemmy_db_views_resolve_object_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/resolve_object_response" }
lemmy_db_views_get_modlog = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_modlog" }
lemmy_db_views_create_site = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_site" }
lemmy_db_views_edit_site = { version = "=1.0.0-alpha.5", path = "./crates/db_views/edit_site" }
lemmy_db_views_site_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/site_response" }
lemmy_db_views_get_site_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_site_response" }
lemmy_db_views_my_user_info = { version = "=1.0.0-alpha.5", path = "./crates/db_views/my_user_info" }
lemmy_db_views_plugin_metadata = { version = "=1.0.0-alpha.5", path = "./crates/db_views/plugin_metadata" }
lemmy_db_views_readable_federation_state = { version = "=1.0.0-alpha.5", path = "./crates/db_views/readable_federation_state" }
lemmy_db_views_federated_instances = { version = "=1.0.0-alpha.5", path = "./crates/db_views/federated_instances" }
lemmy_db_views_instance_with_federation_state = { version = "=1.0.0-alpha.5", path = "./crates/db_views/instance_with_federation_state" }
lemmy_db_views_get_federated_instances_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_federated_instances_response" }
lemmy_db_views_purge_person = { version = "=1.0.0-alpha.5", path = "./crates/db_views/purge_person" }
lemmy_db_views_purge_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/purge_community" }
lemmy_db_views_purge_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/purge_comment" }
lemmy_db_views_purge_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/purge_post" }
lemmy_db_views_list_registration_applications = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_registration_applications" }
lemmy_db_views_list_registration_applications_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/list_registration_applications_response" }
lemmy_db_views_get_registration_application = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_registration_application" }
lemmy_db_views_approve_registration_application = { version = "=1.0.0-alpha.5", path = "./crates/db_views/approve_registration_application" }
lemmy_db_views_registration_application_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/registration_application_response" }
lemmy_db_views_get_unread_registration_application_count_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/get_unread_registration_application_count_response" }
lemmy_db_views_user_block_instance_params = { version = "=1.0.0-alpha.5", path = "./crates/db_views/user_block_instance_params" }
lemmy_db_views_admin_block_instance_params = { version = "=1.0.0-alpha.5", path = "./crates/db_views/admin_block_instance_params" }
lemmy_db_views_admin_allow_instance_params = { version = "=1.0.0-alpha.5", path = "./crates/db_views/admin_allow_instance_params" }
lemmy_db_views_admin_list_users = { version = "=1.0.0-alpha.5", path = "./crates/db_views/admin_list_users" }
lemmy_db_views_admin_list_users_response = { version = "=1.0.0-alpha.5", path = "./crates/db_views/admin_list_users_response" }
lemmy_db_views_create_oauth_provider = { version = "=1.0.0-alpha.5", path = "./crates/db_views/create_oauth_provider" }
lemmy_db_views_delete_oauth_provider = { version = "=1.0.0-alpha.5", path = "./crates/db_views/delete_oauth_provider" }
lemmy_db_views_edit_oauth_provider = { version = "=1.0.0-alpha.5", path = "./crates/db_views/edit_oauth_provider" }
lemmy_db_views_authenticate_with_oauth = { version = "=1.0.0-alpha.5", path = "./crates/db_views/authenticate_with_oauth" }
activitypub_federation = { version = "0.7.0-beta.1", default-features = false, features = [
  "actix-web",
] }
diesel = { version = "2.2.10", features = [
  "chrono",
  "postgres",
  "serde_json",
  "uuid",
  "64-column-tables",
] }
diesel_migrations = "2.2.0"
diesel-async = "0.5.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
actix-web = { version = "4.10.2", default-features = false, features = [
  "compress-brotli",
  "compress-gzip",
  "compress-zstd",
  "cookies",
  "macros",
  "rustls-0_23",
] }
tracing = { version = "0.1.41", default-features = false }
tracing-actix-web = { version = "0.7.18", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.18", default-features = false, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
] }
reqwest-middleware = "0.4.2"
reqwest-tracing = "0.5.7"
clokwerk = "0.4.0"
doku = { version = "0.21.1", features = ["url-2"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = [
  "now",
  "serde",
], default-features = false }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
base64 = "0.22.1"
uuid = { version = "1.13.1", features = ["serde"] }
captcha = "1.0.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
diesel_ltree = "0.4.0"
serial_test = "3.2.0"
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.11.1"
diesel-derive-newtype = "2.1.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
enum-map = { version = "2.7" }
strum = { version = "0.27.0", features = ["derive"] }
itertools = "0.14.0"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.2"
rosetta-i18n = "0.1.3"
ts-rs = { version = "10.1.0", features = [
  "chrono-impl",
  "no-serde-warnings",
  "url-impl",
] }
rustls = { version = "0.23.23", features = ["ring"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13.0"
urlencoding = "2.1.3"
moka = { version = "0.12.10", features = ["future"] }
i-love-jesus = { version = "0.2.0" }
clap = { version = "4.5.37", features = ["derive", "env"] }
pretty_assertions = "1.4.1"
derive-new = "0.7.0"
tuplex = "0.1.2"
html2text = "0.14.0"
async-trait = "0.1.88"
either = "1.15.0"

[dependencies]
lemmy_api = { workspace = true }
lemmy_api_crud = { workspace = true }
lemmy_apub = { workspace = true }
lemmy_apub_objects = { workspace = true }
lemmy_utils = { workspace = true }
lemmy_db_schema = { workspace = true }
lemmy_db_schema_file = { workspace = true }
lemmy_api_utils= { workspace = true }
lemmy_routes = { workspace = true }
lemmy_federate = { workspace = true }
activitypub_federation = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tokio.workspace = true
clap = { workspace = true }
mimalloc = "0.1.46"

# Speedup RSA key generation
# https://github.com/RustCrypto/RSA/blob/master/README.md#example
[profile.dev.package.num-bigint-dig]
opt-level = 3
